Add conection string to SQL

--- a/MySportShope/appsettings.Development.json
+++ b/MySportShope/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MainDB": "Server=(localdb)\\MSSqlLocalDb;Database=MyShopSport;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
