--- a/MySportShope/appsettings.Development.json
+++ b/MySportShope/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "MainDB": "Server=(localdb)\\MSSqlLocalDb;Database=MyShopSport;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Authentication": {
+    "Secret": "B67E7F7687D8B2918F719562C799D",
+    "Issuer": "https://localhost:7291",
+    "Audience": "MySportShope"
   }
 }
