--- a/MySportShope/appsettings.Development.json
+++ b/MySportShope/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MainDB": "Server=(localdb)\\MSSqlLocalDb;Database=MyShopSport;Trusted_Connection=True;TrustServerCertificate=True;"
+    "MainDB": "Server=DESKTOP-CSIH7B8;Database=MyShopSport;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Authentication": {
     "Secret": "B67E7F7687D8B2918F719562C799D",
