--- a/react-mysportshope/package.json
+++ b/react-mysportshope/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@mantine/core": "^7.5.0",
     "@reduxjs/toolkit": "^2.1.0",
     "@tabler/icons": "^2.46.0",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-social-icons": "^6.10.0",
+    "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.4",
